# python-docs-generator

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  pyproject.toml  search.html  sitemap.xml
.github/workflows/: docs.yml
docs/: mkdocs.yml
docs/docs/: index.md  installation-pipy.md  installation.md  requirements.md  usage.md
installation/: index.html
license/: index.html
requirements/: index.html
search/: search_index.json
src/python_docs_generator/: __init__.py  __main__.py
src/python_docs_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/python_docs_generator/scripts/: __init__.py  commons.py
src/python_docs_generator/scripts/templates/: index.md  installation.md
usage/: index.html
